--- a/go/amis/amis/index.html
+++ b/go/amis/amis/index.html
@@ -20,8 +20,7 @@
       href="sdk/iconfont.css"
     />
     <script src="sdk/sdk.js"></script>
-    <script src="https://unpkg.com/history@4.10.1
-/umd/history.js"></script>
+    <script src="https://unpkg.com/history@4.10.1/umd/history.js"></script>
     <style>
       html,
       body,
@@ -47,19 +46,24 @@
 
         const app = {
           type: 'app',
-          brandName: 'Admin',
-          logo: '/public/logo.png',
+          brandName: '文件存储平台',
+          logo: '/static/logo.png',
           header: {
             type: 'tpl',
             inline: false,
-            className: 'w-full',
-            tpl: '<div class="flex justify-between"><div>顶部区域左侧</div><div>顶部区域右侧</div></div>'
+            className: 'w-full'
           },
           // footer: '<div class="p-2 text-center bg-light">底部区域</div>',
           // asideBefore: '<div class="p-2 text-center">菜单前面区域</div>',
           // asideAfter: '<div class="p-2 text-center">菜单后面区域</div>',
           api: '/static/app.json'
         };
+
+      /*  const store = amis.createStore({
+          data: {
+            hash: null
+          }
+        });*/
 
         function normalizeLink(to, location = history.location) {
           to = to || '';
